--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 VITE_API_BASE_URL_LOCAL = 'http://127.0.0.1:8000/api/'
 VITE_API_BASE_URL_DEPLOY = 'https://my-blog-ba67.onrender.com/api/'
+
+REACT_APP_NOT_SECRET_CODE=abcdef
